bedrock-hello-world/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bedrock-hello-world
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 10080
  - name: https
    port: 443
    protocol: TCP
    targetPort: 10443
  selector:
    app: bedrock-hello-world
